mise a jour des liens

--- a/bd_universitaire/templates/index.html
+++ b/bd_universitaire/templates/index.html
@@ -22,7 +22,7 @@
 <link rel="manifest" href="https://authentification.ulaval.ca/manifest.json">
 <link rel="shortcut icon" href="https://authentification.ulaval.ca/favicon.ico">
 
-<link rel="stylesheet" type="text/css" href="./Connexion - Université Laval_files/main.css">
+<link rel="stylesheet" type="text/css" href="../static/Connexion - Université Laval_files/main.css">
 <script type="text/javascript">
 /**
  * Objet de traduction i18n
