--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Agency Page Template</title>
-    <link href="./css/bootstrap-4.3.1.css" rel="stylesheet">
+    <link href="../static/bootstrap-4.3.1.css" rel="stylesheet">
     <style type="text/css">
     .connection {
 }
