--- a/bd_universitaire/templates/index.html
+++ b/bd_universitaire/templates/index.html
@@ -12,7 +12,7 @@
 			<h1>Login</h1>
 			<div class="links">
 				<a href="{{ url_for('login') }}" class="active">Login</a>
-				<a href="#">Register</a>
+				<a href="./mon site web/Sanstitre-2.html">Register</a>
 			</div>
 			<form action="{{ url_for('login') }}" method="post">
 				<label for="username">
