--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -37,32 +37,32 @@
       <div class="container ">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <a href="Sanstitre-3.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/unnamed.png" data-holder-rendered="true"></a>
+            <a href="Sanstitre-3.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/unnamed.png" data-holder-rendered="true"></a>
 <h3>Cours</h3>
             <p>Apercu de vos notes de cours et avancement&nbsp;</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img src="./img/74229021-diagramme-circulaire-infographique-modèle-de-cercle-vectoriel-qui-peut-être-utilisé-pour-le-graphique-diag.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true">
+            <img src="../static/74229021-diagramme-circulaire-infographique-modèle-de-cercle-vectoriel-qui-peut-être-utilisé-pour-le-graphique-diag.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true">
             <h3>Programme</h3>
             <p>Visualiser ici l'avancement de votre programme universitaire</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/df4d5903-3569-4e1b-a0c2-3ae1b1df0d3b.png" data-holder-rendered="true">
+            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/df4d5903-3569-4e1b-a0c2-3ae1b1df0d3b.png" data-holder-rendered="true">
             <h3>Defi</h3>
             <p>Voyez l'avancement de vos défi personnel&nbsp; &nbsp;</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/images.jpg" data-holder-rendered="true">
+            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../stativ/images.jpg" data-holder-rendered="true">
             <h3>Prévision</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/project-planing-01-01.png" data-holder-rendered="true">
+            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/project-planing-01-01.png" data-holder-rendered="true">
             <h3>Organisation</h3>
             <p>Organiser vos journée pour atteindre vos objectifs</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/bd70b9be-19a5-46de-aca8-09f01d62fcfd.png" data-holder-rendered="true">
+            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/bd70b9be-19a5-46de-aca8-09f01d62fcfd.png" data-holder-rendered="true">
             <h3>Perfomance</h3>
             <p>Evaluer votre perfomance géneral en tant qu'étudiant</p>
           </div>
@@ -130,9 +130,9 @@
       </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="../static/jquery-3.3.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed --> 
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap-4.3.1.js"></script>
+    <script src="../static/popper.min.js"></script>
+    <script src="../static/bootstrap-4.3.1.js"></script>
   </body>
 </html>
