--- a/bd_universitaire/templates/profile.html
+++ b/bd_universitaire/templates/profile.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Light Theme</title>
-<link href="./css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<link href="../static/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container"> 
@@ -16,7 +16,7 @@
 <section class="intro">
     <div class="column">
       <h3>Diete Baxter</h3>
-<img src="./img/profile.png" alt="" class="profile"> </div>
+<img src="../static/profile.png" alt="" class="profile"> </div>
 <div class="column">
       <p> Programme :</p>
       <p>Année d'étude:</p>
