--- a/bd_universitaire/templates/Sanstitre-3.html
+++ b/bd_universitaire/templates/Sanstitre-3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Resume Page Template</title>
     <!-- Bootstrap -->
-    <link href="./css/bootstrap-4.3.1.css" rel="stylesheet">
+    <link href="../static/bootstrap-4.3.1.css" rel="stylesheet">
   </head>
   <body>
 	  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -47,22 +47,22 @@
   </div>
     <div class="container ">
       <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="Sanstitre-6.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="Sanstitre-6.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
           <h3>Base de données</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img src="./img/fountain-pen-1851096_1920.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img src="../static/fountain-pen-1851096_1920.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true">
           <h3>Programmation en C++</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
           <h3>Mathématique de l'ing 2</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
           <h3>Mécanique des fluides&nbsp; &nbsp; &nbsp; </h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
           <h3>Probabilité pour Ingénieur</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="./img/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
           <h3>Anglais Intermédiaire</h3>
         </div>
         <p class="text-center">&nbsp;</p>
@@ -324,7 +324,7 @@
       </div>
     </div>
   </section>
-<script src="./js/popper.min.js"></script>
-  <script src="./js/bootstrap-4.3.1.js"></script>
+<script src="../static/popper.min.js"></script>
+  <script src="../static/bootstrap-4.3.1.js"></script>
 </body>
 </html>
