--- a/bd_universitaire/templates/register.html
+++ b/bd_universitaire/templates/register.html
@@ -25,17 +25,17 @@
 				<input type="password" name="password" placeholder="Password" id="password" required>
 
 				<label for="nom">
-					<i class="fas fa-user"></i>
+					<i class="fas fa-signature"></i>
 				</label>
 					<input type="text" name="nom" placeholder="Nom" id="nom" required>
 
 				<label for="credit">
-					<i class="fas fa-user"></i>
+					<i class="fas fa-calendar-plus"></i>
 				</label>
 					<input type="text" name="credit" placeholder="Credit" id="credit" required>
 
 				<label for="sigleProgramme">
-					<i class="fas fa-user"></i>
+					<i class="fas fa-tasks"></i>
 				</label>
 					<input type="text" name="sigleProgramme" placeholder="Sigle du Programme" id="sigleProgramme" required>
 
