--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -52,7 +52,7 @@
             <p>Voyez l'avancement de vos défi personnel&nbsp; &nbsp;</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../stativ/images.jpg" data-holder-rendered="true">
+            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/images.jpg" data-holder-rendered="true">
             <h3>Prévision</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
           </div>
