--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Agency Page Template</title>
     <link href="../static/bootstrap-4.3.1.css" rel="stylesheet">
+	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <style type="text/css">
     .connection {
 }
@@ -13,6 +14,34 @@
   </head>
   <body>
 <header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="Sanstitre-2.html">Acceuil <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="profile.html">Mon Compte</a>
+          </li>
+          <li class="nav-item dropdown">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Recherche" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  <script src="./js/jquery-3.3.1.min.js"></script>
 <div class="jumbotron">
     <div class="container">
           <div class="row">
@@ -75,19 +104,39 @@
         <div class="jumbotron col-lg-6">
           <div class="row text-center">
             <div class="text-center col-12">
-              <h2>Try a free trial now</h2>
+              <h2>C la hess</h2>
             </div>
             <div class="text-center col-12">
               <form id="feedbackForm" class="text-center">
-                <div class="form-group">
-                  <label for="name">idul</label>
-                  <input type="text" class="form-control" id="idul" name="idul" placeholder="idul" aria-describedby="nameHelp">
-                  <span id="nameHelp" class="form-text text-muted" style="display: none;">Please enter your name.</span></div>
-                <div class="form-group">
-                  <label for="email">E-Mail</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" aria-describedby="emailHelp">
-                  <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span></div>
-<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg"> Send</button>
+                <ul class="zeubi">
+                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li>10,000+ Free Templates <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i></li>
+                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+    <i class="fa fa-times-circle"></i>
+  </label></li>
+                <li class="not-available">500,000+ Premium Images  <label class="icon" for="this-input">
+    <i class="fa fa-times-circle"></i>
+  </label></li>
+                <li class="not-available">50,000+ Video Clips <label class="icon" for="this-input">
+    <i class="fa fa-times-circle"></i>
+  </label></li>
+                <li class="not-available">Create unlimited video & animations <label class="icon" for="this-input">
+    <i class="fa fa-times-circle"></i>
+  </label></li>
+                <li class="not-available">Upload own videos <label class="icon" for="this-input">
+    <i class="fa fa-times-circle"></i>
+  </label></li>
+                <li class="not-available">Create Teams to collaborate on designs <label class="icon" for="this-input">
+    <i class="fa fa-times-circle"></i>
+  </label></li>
+                <li class="not-available">Access to PRO on mobile <label class="icon" for="this-input">
+    <i class="fa fa-times-circle"></i>
+  </label></li>
+            </ul>
+<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">T pauvre zeubi!</button>
               </form>
             </div>
           </div>
@@ -95,24 +144,39 @@
         <div class="jumbotron col-lg-6">
           <div class="row text-center">
             <div class="text-center col-12">
-              <h2>Full access to the site&nbsp;&nbsp;</h2>
+              <h2>Pigeon</h2>
             </div>
             <div class="text-center col-12">
-              <!-- CONTACT FORM https://github.com/jonmbake/bootstrap3-contact-form -->
-              <form id="feedbackForm2" class="text-center">
-                <div class="form-group">
-                  <label for="name2">Name</label>
-                  <input type="text" class="form-control" id="name2" name="name2" placeholder="Name" aria-describedby="nameHelp">
-                  <span id="nameHelp2" class="form-text text-muted" style="display: none;">Please enter your name.</span></div>
-                <div class="form-group">
-                  <label for="email2">idul&nbsp;</label>
-                  <input type="email" class="form-control" id="email2" name="email2" placeholder="idul" aria-describedby="emailHelp">
-<span id="emailHelp2" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span></div>
-                <div class="form-group">
-                  <label for="message2">Carte de crédit&nbsp;&nbsp;</label>
-<span id="messageHelp2" class="form-text text-muted" style="display: none;">Please enter a message.</span></div>
-                <input type="email" class="form-control" id="email3" name="email3" placeholder="carte number" aria-describedby="emailHelp">
-<button type="submit" id="feedbackSubmit2" class="btn btn-primary btn-lg"> Continue&nbsp;</button>
+              <form id="feedbackForm" class="text-center">
+                <ul class="zeubi">
+                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li>10,000+ Free Templates <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i></li>
+                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li class="not-available">500,000+ Premium Images  <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li class="not-available">50,000+ Video Clips <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li class="not-available">Create unlimited video & animations <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li class="not-available">Upload own videos <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li class="not-available">Create Teams to collaborate on designs <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+                <li class="not-available">Access to PRO on mobile <label class="icon" for="this-input">
+    <i class="fa fa-check-circle"></i>
+  </label></li>
+            </ul>
+<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">Tu ralass!</button>
               </form>
             </div>
           </div>
