--- a/bd_universitaire/static/bootstrap-4.3.1.css
+++ b/bd_universitaire/static/bootstrap-4.3.1.css
@@ -99,6 +99,9 @@ address {
   font-style: normal;
   line-height: inherit;
 }
+features{
+	text-align: justify
+}
 
 ol,
 ul,
@@ -362,7 +365,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.2;
 }
 
@@ -371,7 +374,8 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 2rem;
+  font-size: 2.2rem;
+  
 }
 
 h3, .h3 {
@@ -9757,8 +9761,12 @@ button.bg-dark:focus {
 }
 
 .text-center {
-  text-align: center !important;
+  text-align: center !important;z
 }
+.zeubi{
+	text-align: justify
+}
+
 
 @media (min-width: 576px) {
   .text-sm-left {
