--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Agency Page Template</title>
-    <link href="../static/bootstrap-4.3.1.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/bootstrap-4.3.1.css">
 	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <style type="text/css">
     .connection {
@@ -66,7 +66,7 @@
       <div class="container ">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <a href="Sanstitre-3.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/unnamed.png" data-holder-rendered="true"></a>
+            <a href="{{ url_for('Cours') }}"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/unnamed.png" data-holder-rendered="true"></a>
 <h3>Cours</h3>
             <p>Apercu de vos notes de cours et avancement&nbsp;</p>
           </div>
