--- a/bd_universitaire/templates/Sanstitre-3.html
+++ b/bd_universitaire/templates/Sanstitre-3.html
@@ -47,7 +47,7 @@
   </div>
     <div class="container ">
       <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="Sanstitre-6.html"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="{{ url_for('Cours1') }}"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
           <h3>Base de données</h3>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img src="../static/fountain-pen-1851096_1920.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true">
