Lien vers toutes les pages html avec le flask

--- a/bd_universitaire/templates/profile.html
+++ b/bd_universitaire/templates/profile.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container"> 
   <header class="header">
-<div class="button"><a href="Sanstitre-2.html">Acceuil </a></div>
+<div class="button"><a href="{{ url_for('Acceuil') }}">Acceuil </a></div>
     <h4 class="logo">Résumé de votre profil&nbsp;&nbsp;</h4>
 </header>
 <section class="intro">
