--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="Sanstitre-2.html">Acceuil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="profile.html">Mon Compte</a>
+            <a class="nav-link" href="{{ url_for('Profile') }}">Mon Compte</a>
           </li>
           <li class="nav-item dropdown">
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
