--- a/bd_universitaire/templates/Sanstitre-3.html
+++ b/bd_universitaire/templates/Sanstitre-3.html
@@ -16,10 +16,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="Sanstitre-2.html">Acceuil <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{ url_for('Acceuil') }}">Acceuil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="profile.html">Mon Compte</a>
+            <a class="nav-link" href="{{ url_for('Profile') }}">Mon Compte</a>
           </li>
           <li class="nav-item dropdown">
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
