--- a/bd_universitaire/templates/Sanstitre-6.html
+++ b/bd_universitaire/templates/Sanstitre-6.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>eCommerce template By Adobe Dreamweaver CC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../static/eCommerceStyle.css" rel="stylesheet" type="text/css">
+<link href="../static/eCommerceStyle.css" rel="stylesheet" type="text/css"><script src="..//static/Chart.min.js"></script>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
@@ -13,7 +13,7 @@
 <div id="mainWrapper">
   <header> 
     
-    <div id="headerLinks"><a href="Sanstitre-2.html" title="Login/Register">Acceuil</a></div>
+    <div id="headerLinks"><a href="{{ url_for('Acceuil') }}" >Acceuil</a></div>
   </header>
 <div id="content">
     <section class="sidebar"> 
@@ -26,7 +26,7 @@
           <hr>
           <ul>
             <!-- List of links under menuset 1 -->
-            <li><a href="#" title="Link">Afficher vos notes</a></li>
+            <li><a href="{{ url_for('chart') }}" title="Link">Afficher vos notes</a></li>
             <li><a href="#" title="Link">Modifier votre objectifs</a></li>
           </ul>
         </nav>
@@ -35,40 +35,6 @@
     <section class="mainContent">
       <div class="productRow">
 	    <h1>Tableau des notes</h1>
-<!-- bar chart canvas element --><canvas id="chart" width="600" height="400"></canvas>
-<script><br />
-   // bar chart data<br />
-   var barData = {<br />
-   labels : [],<br />
-   datasets : [<br />
-      {<br />
-            fillColor: "rgba(151,187,205,0.2)",<br />
-            strokeColor: "rgba(151,187,205,1)",<br />
-            pointColor: "rgba(151,187,205,1)",<br />
-         data : []<br />
-      }<br />
-      ]<br />
-   }</p>
-<p>   // get bar chart canvas<br />
-   var mychart = document.getElementById("chart").getContext("2d");</p>
-<p>   steps = 10<br />
-   max = 10<br />
-   // draw bar chart<br />
-   new Chart(mychart).Bar(barData, {<br />
-        scaleOverride: true,<br />
-        scaleSteps: steps,<br />
-        scaleStepWidth: Math.ceil(max / steps),<br />
-        scaleStartValue: 0,<br />
-        scaleShowVerticalLines: true,<br />
-        scaleShowGridLines : true,<br />
-        barShowStroke : true,<br />
-        scaleShowLabels: true<br />
-   });</p>
-<p></script>
-      </div>
-
-
-
       </div>
     </section>
   </div>
