--- a/bd_universitaire/templates/Sanstitre-3.html
+++ b/bd_universitaire/templates/Sanstitre-3.html
@@ -48,22 +48,22 @@
     <div class="container ">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="{{ url_for('Cours1') }}"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
-          <h3>Base de données</h3>
+          <h3>{{ cours01 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img src="../static/fountain-pen-1851096_1920.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true">
-          <h3>Programmation en C++</h3>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="{{ url_for('Cours2') }}"><img src="../static/fountain-pen-1851096_1920.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true"></a>
+          <h3>{{ cours02 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
-          <h3>Mathématique de l'ing 2</h3>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours3') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+          <h3>{{ cours03 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
-          <h3>Mécanique des fluides&nbsp; &nbsp; &nbsp; </h3>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours4') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+          <h3>{{ cours04 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
-          <h3>Probabilité pour Ingénieur</h3>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours5') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+          <h3>{{ cours05 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true">
-          <h3>Anglais Intermédiaire</h3>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours5') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+          <h3>{{ cours06 }}</h3>
         </div>
         <p class="text-center">&nbsp;</p>
         <p class="text-center">&nbsp;</p>
