--- a/bd_universitaire/templates/Sanstitre-6.html
+++ b/bd_universitaire/templates/Sanstitre-6.html
@@ -7,6 +7,7 @@
 <link href="../static/eCommerceStyle.css" rel="stylesheet" type="text/css"><script src="..//static/Chart.min.js"></script>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
           <hr>
           <ul>
             <!-- List of links under menuset 1 -->
-            <li><a href="{{ url_for('chart') }}" title="Link">Afficher vos notes</a></li>
+            <li><a href="{{ url_for('Cours1') }}" title="Link">Afficher vos notes</a></li>
             <li><a href="#" title="Link">Modifier votre objectifs</a></li>
           </ul>
         </nav>
@@ -35,6 +36,49 @@
     <section class="mainContent">
       <div class="productRow">
 	    <h1>Tableau des notes</h1>
+        <canvas id="chart" width="600" height="400"></canvas>
+    <script>
+      // bar chart data
+      var barData = {
+        labels : [
+          {% for item in labels %}
+           "{{ item }}",
+          {% endfor %}
+	],
+
+        datasets : [{
+          fillColor: "rgba(151,187,205,0.2)",
+          strokeColor: "rgba(151,187,205,1)",
+          pointColor: "rgba(151,187,205,1)",
+          data : [
+            {% for item in values %}
+               "{{ item }}",
+              {% endfor %}
+	    ]
+          }
+        ]
+      }
+
+     // get bar chart canvas
+     var mychart = document.getElementById("chart").getContext("2d");
+
+       steps = 10
+       max = {{max}}
+
+     // draw bar chart
+     new Chart(mychart).Bar(barData, {
+       scaleOverride: true,
+       scaleSteps: steps,
+       scaleStepWidth: Math.ceil(max / steps),
+       scaleStartValue: 0,
+       scaleShowVerticalLines: true,
+       scaleShowGridLines : true,
+       barShowStroke : true,
+       scaleShowLabels: true
+       }
+     );
+
+    </script>
       </div>
     </section>
   </div>
