--- a/bd_universitaire/templates/graphique.html
+++ b/bd_universitaire/templates/graphique.html
@@ -11,6 +11,7 @@
     .connection {
 }
     </style>
+	  <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
   </head>
   <body>
 <header>
@@ -44,20 +45,9 @@
   <script src="./js/jquery-3.3.1.min.js"></script>
 <div class="jumbotron">
     <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <h1 class="text-center">Réussite 2.0&nbsp; &nbsp;</h1>
-              <h1 class="text-lowercase text-center"><strong>Le dash bord vous offre un overview sur votre session et votre programme d'étude</strong></h1>
-<p>&nbsp;</p>
-              <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p>
-            </div>
-          </div>
-        </div>
-  </div>
-</header>
-    <section class="mainContent">
+          <section class="mainContent">
       <div class="text-center">
-	    <h1>Tableau des notes</h1>
+	    <h1><strong>Tableau des notes</strong></h1>
         <canvas id="chart" width="600" height="400"></canvas>
     <script>
       // bar chart data
@@ -103,11 +93,15 @@
     </script>
       </div>
     </section>
+        </div>
+  </div>
+</header>
+    
     <footer class="text-center">
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © MyWebsite. All rights reserved.</p>
+            <p>Copyright © Ce site a été fait en une nuit. All rights reserved.</p>
           </div>
         </div>
       </div>
