--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Agency Page Template</title>
+    <title>Home</title>
     <link rel="stylesheet" href="../static/bootstrap-4.3.1.css">
 	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <style type="text/css">
@@ -47,9 +47,9 @@
           <div class="row">
             <div class="col-12">
               <h1 class="text-center">Réussite 2.0&nbsp; &nbsp;</h1>
-              <h1 class="text-lowercase text-center"><strong>Le dash bord vous offre un overview sur votre session et votre programme d'étude</strong></h1>
+              <h1 class="text-center"><strong>Le dash bord vous offre un overview sur votre session et votre programme d'étude</strong></h1>
 <p>&nbsp;</p>
-              <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p>
+              
             </div>
           </div>
         </div>
@@ -104,39 +104,33 @@
         <div class="jumbotron col-lg-6">
           <div class="row text-center">
             <div class="text-center col-12">
-              <h2>C la hess</h2>
+              <h2>Version d'essai</h2>
             </div>
             <div class="text-center col-12">
               <form id="feedbackForm" class="text-center">
                 <ul class="zeubi">
-                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+                <li class="not-available"> Cours <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i>
   </label></li>
-                <li>10,000+ Free Templates <label class="icon" for="this-input">
+                <li>Prévision <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i></li>
-                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+                <li class="not-available">Programme <label class="icon" for="this-input">
     <i class="fa fa-times-circle"></i>
   </label></li>
-                <li class="not-available">500,000+ Premium Images  <label class="icon" for="this-input">
+                <li class="not-available">Organisation  <label class="icon" for="this-input">
     <i class="fa fa-times-circle"></i>
   </label></li>
-                <li class="not-available">50,000+ Video Clips <label class="icon" for="this-input">
+                <li class="not-available">Defi <label class="icon" for="this-input">
     <i class="fa fa-times-circle"></i>
   </label></li>
-                <li class="not-available">Create unlimited video & animations <label class="icon" for="this-input">
+                <li class="not-available">Performance <label class="icon" for="this-input">
     <i class="fa fa-times-circle"></i>
   </label></li>
-                <li class="not-available">Upload own videos <label class="icon" for="this-input">
-    <i class="fa fa-times-circle"></i>
-  </label></li>
-                <li class="not-available">Create Teams to collaborate on designs <label class="icon" for="this-input">
-    <i class="fa fa-times-circle"></i>
-  </label></li>
-                <li class="not-available">Access to PRO on mobile <label class="icon" for="this-input">
-    <i class="fa fa-times-circle"></i>
-  </label></li>
+                
+                
+                
             </ul>
-<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">T pauvre zeubi!</button>
+<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">Ça me convient !</button>
               </form>
             </div>
           </div>
@@ -144,39 +138,31 @@
         <div class="jumbotron col-lg-6">
           <div class="row text-center">
             <div class="text-center col-12">
-              <h2>Pigeon</h2>
+              <h2>Version complète </h2>
             </div>
             <div class="text-center col-12">
               <form id="feedbackForm" class="text-center">
                 <ul class="zeubi">
-                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+                <li class="not-available">Cours <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i>
   </label></li>
-                <li>10,000+ Free Templates <label class="icon" for="this-input">
+                <li>Prévision <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i></li>
-                <li class="not-available"> 20,000+ Premium Templates <label class="icon" for="this-input">
+                <li class="not-available"> Programme <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i>
   </label></li>
-                <li class="not-available">500,000+ Premium Images  <label class="icon" for="this-input">
+                <li class="not-available">Organisation  <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i>
   </label></li>
-                <li class="not-available">50,000+ Video Clips <label class="icon" for="this-input">
+                <li class="not-available">Defi <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i>
   </label></li>
-                <li class="not-available">Create unlimited video & animations <label class="icon" for="this-input">
+                <li class="not-available">Performance <label class="icon" for="this-input">
     <i class="fa fa-check-circle"></i>
   </label></li>
-                <li class="not-available">Upload own videos <label class="icon" for="this-input">
-    <i class="fa fa-check-circle"></i>
-  </label></li>
-                <li class="not-available">Create Teams to collaborate on designs <label class="icon" for="this-input">
-    <i class="fa fa-check-circle"></i>
-  </label></li>
-                <li class="not-available">Access to PRO on mobile <label class="icon" for="this-input">
-    <i class="fa fa-check-circle"></i>
-  </label></li>
+                
             </ul>
-<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">Tu ralass!</button>
+<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">M'y emmener !</button>
               </form>
             </div>
           </div>
@@ -188,7 +174,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © MyWebsite. All rights reserved.</p>
+            <p>Copyright © Le café, ça aide. All rights reserved.</p>
           </div>
         </div>
       </div>
