--- a/bd_universitaire/templates/Sanstitre-3.html
+++ b/bd_universitaire/templates/Sanstitre-3.html
@@ -50,19 +50,19 @@
         <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="{{ url_for('Cours1') }}"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
           <h3>{{ cours01 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="{{ url_for('Cours2') }}"><img src="../static/fountain-pen-1851096_1920.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true"></a>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <a href="{{ url_for('Cours2') }}"><img src="../static/l_gestion-client-bureau-etude-everwin-cxm.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true"></a>
           <h3>{{ cours02 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours3') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours3') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/18040e043052.jpg" data-holder-rendered="true"></a>
           <h3>{{ cours03 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours4') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours4') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/bureau-détude-e1512540742981.jpg" data-holder-rendered="true"></a>
           <h3>{{ cours04 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours5') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours5') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/images25.jpg" data-holder-rendered="true"></a>
           <h3>{{ cours05 }}</h3>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours5') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/fountain-pen-1851096_1920.jpg" data-holder-rendered="true"></a>
+        <div class="col-lg-4 col-md-6 col-sm-12 text-center"><a href="{{ url_for('Cours5') }}"> <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/unnamed.jpg" data-holder-rendered="true"></a>
           <h3>{{ cours06 }}</h3>
         </div>
         <p class="text-center">&nbsp;</p>
@@ -286,7 +286,7 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
-        <p> <a class="btn btn-primary btn-lg" href="#" role="button">Listes de tous vos cours</a></p>
+
         <p class="text-center">&nbsp;</p>
         <p class="text-center">&nbsp;</p>
         <p class="text-center">&nbsp;</p>
@@ -326,5 +326,14 @@
   </section>
 <script src="../static/popper.min.js"></script>
   <script src="../static/bootstrap-4.3.1.js"></script>
+  <footer class="text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p>Copyright © c'est vrai, on ment pas. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
