--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -162,7 +162,7 @@
   </label></li>
                 
             </ul>
-<button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">M'y emmener !</button>
+<button type="submit" id="feedbackSubmit" href="{{ url_for('Acceuil') }}" class="btn btn-primary btn-lg">M'y emmener !</button>
               </form>
             </div>
           </div>
