--- a/bd_universitaire/static/bootstrap-4.3.1.css
+++ b/bd_universitaire/static/bootstrap-4.3.1.css
@@ -52,7 +52,58 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
-
+.modal-body {
+  background: white;
+  padding: 40px 100px;
+  box-shadow: 0px 50px 30px -30px rgba(0, 0, 0, 0.3);
+  margin-bottom: 50px;
+  position: absolute;
+  top: 0;
+  display: none;
+  box-sizing: border-box;
+  width: 100%;
+  -webkit-transform-origin: top left;
+          transform-origin: top left;
+}
+.modal-body.is-showing {
+  display: block;
+}
+.buttonneur,
+.rerun-buttonneur {
+  padding: 10px 20px;
+  border-radius: 3px;
+  background: #FF6F00;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  display: inline-block;
+  cursor: pointer;
+}
+.buttonneur:hover,
+.rerun-buttonneur:hover {
+  background: #e66400;
+}
+.titlee {
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #000000;
+  font-weight: 300;
+  font-size: 24px;
+  letter-spacing: 1px;
+}
+.descriptionn {
+  text-align: center;
+  color: #666;
+  margin-bottom: 30px;
+}
+.buttonner.rerun-buttonner,
+.rerun-buttonner.rerun-buttonner {
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  margin-bottom: 50px;
+  box-shadow: 0px 10px 15px -6px rgba(0, 0, 0, 0.2);
+  display: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -416,6 +467,17 @@ h6, .h6 {
   font-size: 4.5rem;
   font-weight: 300;
   line-height: 1.2;
+}
+input[type="text"],
+input[type="email"] {
+  padding: 10px 20px;
+  border: 1px solid #999;
+  border-radius: 3px;
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+  outline: none;
 }
 
 .display-4 {
