--- a/bd_universitaire/templates/Sanstitre-2.html
+++ b/bd_universitaire/templates/Sanstitre-2.html
@@ -68,7 +68,7 @@
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <a href="{{ url_for('Cours') }}"><img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/unnamed.png" data-holder-rendered="true"></a>
 <h3>Cours</h3>
-            <p>Apercu de vos notes de cours et avancement&nbsp;</p>
+            <p>Aperçu de vos notes de cours et avancement&nbsp;</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img src="../static/74229021-diagramme-circulaire-infographique-modèle-de-cercle-vectoriel-qui-peut-être-utilisé-pour-le-graphique-diag.jpg" alt="140x140" class="rounded-circle" style="width: 140px; height: 140px;" data-holder-rendered="true">
@@ -78,23 +78,23 @@
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/df4d5903-3569-4e1b-a0c2-3ae1b1df0d3b.png" data-holder-rendered="true">
             <h3>Defi</h3>
-            <p>Voyez l'avancement de vos défi personnel&nbsp; &nbsp;</p>
+            <p>Voyez l'avancement de vos défis personnels&nbsp; &nbsp;</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
               <a href="{{ url_for('Prevision') }}">
                   <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/images.jpg" data-holder-rendered="true"></a>
             <h3>Prévision</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <p>Simuler la note de passage</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/project-planing-01-01.png" data-holder-rendered="true">
             <h3>Organisation</h3>
-            <p>Organiser vos journée pour atteindre vos objectifs</p>
+            <p>Organiser vos journées pour atteindre vos objectifs</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="../static/bd70b9be-19a5-46de-aca8-09f01d62fcfd.png" data-holder-rendered="true">
             <h3>Perfomance</h3>
-            <p>Evaluer votre perfomance géneral en tant qu'étudiant</p>
+            <p>Evaluer votre perfomance génerale en tant qu'étudiant</p>
           </div>
         </div>
 </div>
@@ -175,7 +175,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Le café, ça aide. All rights reserved.</p>
+            <p>Copyright © MaRéussite2.0. All rights reserved.</p>
           </div>
         </div>
       </div>
