--- a/bd_universitaire/templates/profile.html
+++ b/bd_universitaire/templates/profile.html
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Finalement on a pas dormi, All rights reserved.</p>
+            <p>Copyright © MaRéussite2.0. All rights reserved.</p>
           </div>
         </div>
       </div>
