--- a/bd_universitaire/templates/Sanstitre-3.html
+++ b/bd_universitaire/templates/Sanstitre-3.html
@@ -330,7 +330,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © c'est vrai, on ment pas. All rights reserved.</p>
+            <p>Copyright © MaRéussite2.0. All rights reserved.</p>
           </div>
         </div>
       </div>
