--- a/bd_universitaire/templates/graphique.html
+++ b/bd_universitaire/templates/graphique.html
@@ -103,7 +103,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Ce site a été fait en une nuit. All rights reserved.</p>
+            <p>Copyright © MaRéussite2.0. All rights reserved.</p>
           </div>
         </div>
       </div>
