--- a/bd_universitaire/templates/prevision5.html
+++ b/bd_universitaire/templates/prevision5.html
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Le café, ça aide. All rights reserved.</p>
+            <p>Copyright © MaRéussite2.0. All rights reserved.</p>
           </div>
         </div>
       </div>
